mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mariadb
    spec:
      containers:
      - env:
        - name: ALLOW_EMPTY_PASSWORD
          value: "yes"
        - name: MARIADB_DATABASE
          value: laravel
        - name: MARIADB_PASSWORD
          value: Abc123@.
        - name: MARIADB_USER
          value: ducla
        image: bitnami/mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
status: {}
